add layer presentation

--- a/app/src/main/res/layout/investiment_activity.xml
+++ b/app/src/main/res/layout/investiment_activity.xml
@@ -45,7 +45,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_net_investment_value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
