--- a/app/src/main/res/layout/investiment_activity.xml
+++ b/app/src/main/res/layout/investiment_activity.xml
@@ -82,6 +82,7 @@
         android:hint="dia/mês/ano"
         android:inputType="date"
         android:textSize="30sp"
+        android:maxLength="10"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
