--- a/component/src/main/res/layout/invest_result_head.xml
+++ b/component/src/main/res/layout/invest_result_head.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        style="@style/Title"
         android:text="R$ 1.088,69" />
 
     <TextView
